--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 AUTH0_CLIENT_ID=YOUR_CLIENT_ID
 AUTH0_CLIENT_SECRET=YOUR_CLIENT_SECRET
-AUTH0_DOMAIN=pushp.auth0.com
-AUDIENCE=http://mynodeapi/
+AUTH0_DOMAIN=AUTH0_DOMAIN
+AUDIENCE=API_AUDIENCE
 PORT=3001
